--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -32,7 +32,7 @@ jobs:
           slither-args: >
             --compile-force-framework foundry
             --foundry-out-directory out
-            --filter-paths "(^lib/|^test/|^node_modules/)"
+            --filter-paths "(^lib/|^test/|^node_modules/|src/swaps/CobuildSwap\\.sol$)"
             --exclude-dependencies
             --exclude incorrect-equality,uninitialized-local,unused-return
             --exclude-informational
