chore: bump @cobuild/review-gpt to 0.2.7

--- a/.github/workflows/doc-gardening.yml
+++ b/.github/workflows/doc-gardening.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Run doc gardening
-        run: bash scripts/doc-gardening.sh --fail-on-issues
+        run: bash scripts/doc-gardening.sh
 
       - name: Open doc gardening PR
         uses: peter-evans/create-pull-request@v6
