chore(slither): triage accepted findings by fingerprint

--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -32,6 +32,7 @@ jobs:
           slither-args: >
             --compile-force-framework foundry
             --foundry-out-directory out
+            --triage-database slither.db.json
             --filter-paths "(^lib/|^test/|^node_modules/|src/swaps/CobuildSwap\\.sol$)"
             --exclude-dependencies
             --exclude incorrect-equality,uninitialized-local,unused-return
