chore(verification): split local and CI required gates

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "verify:queue:worker": "scripts/verify-queue.sh worker",
     "verify:queue:required": "scripts/verify-queue.sh submit required --wait",
     "verify:queue:full": "scripts/verify-queue.sh submit full --wait",
-    "verify:required": "pnpm -s verify:queue:required",
+    "verify:required": "pnpm -s build && pnpm -s test:lite:shared",
+    "verify:required:ci": "pnpm -s verify:queue:required",
     "verify:required:full": "pnpm -s verify:queue:full",
     "test:coverage": "pnpm -s coverage && pnpm -s coverage:check",
     "test:coverage:ci": "pnpm -s coverage:ci && pnpm -s coverage:check",
