--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "verify:queue:status": "scripts/verify-queue.sh status",
     "verify:queue:worker": "scripts/verify-queue.sh worker",
     "verify:queue:required": "scripts/verify-queue.sh submit required --wait",
+    "verify:queue:required:ci": "scripts/verify-queue.sh submit required-ci --wait",
     "verify:queue:full": "scripts/verify-queue.sh submit full --wait",
     "verify:required": "pnpm -s build && pnpm -s test:lite:shared",
-    "verify:required:ci": "pnpm -s verify:queue:required",
+    "verify:required:ci": "pnpm -s verify:queue:required:ci",
     "verify:required:full": "pnpm -s verify:queue:full",
     "test:coverage": "pnpm -s coverage && pnpm -s coverage:check",
     "test:coverage:ci": "pnpm -s coverage:ci && pnpm -s coverage:check",
