build(verification): remove verify queue command surface

--- a/package.json
+++ b/package.json
@@ -35,15 +35,9 @@
     "verify:full:nowait": "FULL_GATE_BUILD_THREADS=${FULL_GATE_BUILD_THREADS:-0} scripts/verify-full-gate.sh --no-wait",
     "verify:full:tail": "scripts/tail-full-gate-log.sh",
     "verify:full:tail:latest": "scripts/tail-full-gate-log.sh --latest",
-    "verify:queue": "scripts/verify-queue.sh",
-    "verify:queue:status": "scripts/verify-queue.sh status",
-    "verify:queue:worker": "scripts/verify-queue.sh worker",
-    "verify:queue:required": "scripts/verify-queue.sh submit required --wait",
-    "verify:queue:required:ci": "scripts/verify-queue.sh submit required-ci --wait",
-    "verify:queue:full": "scripts/verify-queue.sh submit full --wait",
     "verify:required": "pnpm -s build && pnpm -s test:lite:shared",
-    "verify:required:ci": "pnpm -s verify:queue:required:ci",
-    "verify:required:full": "pnpm -s verify:queue:full",
+    "verify:required:ci": "pnpm -s build && pnpm -s test:lite:shared && FOUNDRY_PROFILE=ci pnpm -s test:invariant:shared",
+    "verify:required:full": "pnpm -s verify:full",
     "test:coverage": "pnpm -s coverage && pnpm -s coverage:check",
     "test:coverage:ci": "pnpm -s coverage:ci && pnpm -s coverage:check",
     "coverage": "mkdir -p coverage && FOUNDRY_PROFILE=coverage forge coverage --report lcov --report-file coverage/lcov.info --ir-minimum --exclude-tests --skip 'audit-packages/**'",
