--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ evm_version = "prague"
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "read-write", path = "./deploys"}]
 via_ir = true
 optimizer = true
 optimizer_runs = 200
